[tool.poetry]
name = "katyagame"
version = "0.1.0"
description = ""
authors = ["DungeonMaster3000 <igorobed@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pygame = "^2.1.2"
mypy = "^0.982"
black = {extras = ["d"], version = "^22.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
